fix: better responsive spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -18,13 +18,6 @@ body {
   background: radial-gradient(circle at center, #bcdeff 10%, #e5cbff 100%);
 }
 
-@media only screen and (max-width: 480px) {
-  html,
-  body {
-    font-size: 16px;
-  }
-}
-
 html.eraser * {
   cursor: url("/cursor-eraser.png"), auto !important;
 }
@@ -525,4 +518,17 @@ article ul li::before {
   height: 1px;
   display: block;
   background-color: #666;
+}
+
+@media only screen and (max-width: 480px) {
+  html,
+  body {
+    font-size: 16px;
+    padding-right: 8px;
+    padding-left: 8px;
+  }
+
+  main {
+    padding: 24px 16px;
+  }
 }
